kubernetes/apps/default/memos/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  labels:
    app: memos
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
      containers:
        - name: memos
          image: ghcr.io/usememos/memos:0.16
          imagePullPolicy: Always
          ports:
            - containerPort: 5230
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
