kubernetes/apps/default/memos/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  labels:
    app: memos
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
    - name: http
      port: 5230
      targetPort: http
