kubernetes/apps/default/memos/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: memos.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  name: http
  tls:
    - secretName: memos-tls
      hosts:
        - memos.fadhlika.com
